fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -322,19 +322,15 @@ hr {
     .piccontainer {
         all: unset;
     }
-    .middle2,
     .middle h4 {
+        position: static;
         font-size: 16px;
-        padding-bottom: 35px;
         border: none;
     }
     .third {
         width: 90vw;
         padding-top: 25px;
         border: none;
-    }
-    .middle h4 {
-        position: static;
     }
     .paragraph_heading {
         margin-bottom: 0px;
